service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tools
  namespace: tools
spec:
  selector:
    app: tools
  ports:
  - protocol: TCP
    port: 80
    name: http
